Undo/redo with local collection crashes #73234

Closed
opened 2020-01-19 08:22:47 +01:00 by Massimiliano Puliero · 12 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-17 18:59, hash: 5472ae6fdf
Worked: (optional)

Short description of error
change bevel segments makes blender crash in this specific case

Exact steps for others to reproduce the error

Please open the attached file, and bevel the already selected edges, after that change the subdivision to reproduce the crash.
Also take a look at the attached video.

thank you.
Max

bug.blend
bug_video.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-17 18:59, hash: `5472ae6fdf` Worked: (optional) **Short description of error** change bevel segments makes blender crash in this specific case **Exact steps for others to reproduce the error** Please open the attached file, and bevel the already selected edges, after that change the subdivision to reproduce the crash. Also take a look at the attached video. thank you. Max [bug.blend](https://archive.blender.org/developer/F8286962/bug.blend) [bug_video.mp4](https://archive.blender.org/developer/F8286969/bug_video.mp4)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

#73416 was marked as duplicate of this issue

#73416 was marked as duplicate of this issue
Campbell Barton self-assigned this 2020-01-20 08:59:22 +01:00

Note that this happens with many operations (bisect for example) and isn't spesific to bevel.

This is caused by the undo system not taking local collection into account.

Note that this happens with many operations (bisect for example) and isn't spesific to bevel. This is caused by the undo system not taking local collection into account.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Campbell Barton changed title from change bevel segments makes blender crash in this specific case to Undo/redo with local collection crashes 2020-01-27 04:44:09 +01:00

Added subscribers: @Frizzil, @ideasman42

Added subscribers: @Frizzil, @ideasman42

Note that the fix for this issue must also fix #73416 (Blender crashes if you undo immediately after loading this file).

Note that the fix for this issue must also fix #73416 (Blender crashes if you undo immediately after loading this file).

Added subscriber: @esminis

Added subscriber: @esminis

This seems to be only happening on Blender 2.82 (it does not happen on 2.81)

Stacktrace if you need

# Blender 2.82 (sub 6), Commit date: 2020-01-24 17:48, Hash fc1f5bded46a
bpy.ops.mesh.bevel(offset=61.7216, offset_pct=0, release_confirm=True)  # Operator

# backtrace
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(BLI_system_backtrace+0x1d) [0x6fb81ad]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1657639]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f9cf08eef20]
/lib/x86_64-linux-gnu/libc.so.6(+0x18e5c7) [0x7f9cf0a3e5c7]
/lib/x86_64-linux-gnu/libc.so.6(_IO_vfprintf+0x2143) [0x7f9cf090d4d3]
/lib/x86_64-linux-gnu/libc.so.6(vsnprintf+0x90) [0x7f9cf0938910]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x2027e0b]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(CLG_logf+0x105) [0x2028225]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(ED_undo_object_set_active_or_warn+0x7f) [0x1dfbadf]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1fa8da8]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1f885ed]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(BKE_undosys_step_undo_with_data_ex+0x88) [0x1f892a8]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1dfaa28]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(ED_undo_operator_repeat+0x165) [0x1dfb855]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1e1022d]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1e1fff5]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1823093]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1824e4c]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(wm_event_do_handlers+0x312) [0x1825522]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(WM_main+0x20) [0x181b770]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(main+0x317) [0x159dd27]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f9cf08d1b97]
/home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1653eec]
This seems to be only happening on Blender 2.82 (it does not happen on 2.81) Stacktrace if you need ``` # Blender 2.82 (sub 6), Commit date: 2020-01-24 17:48, Hash fc1f5bded46a bpy.ops.mesh.bevel(offset=61.7216, offset_pct=0, release_confirm=True) # Operator # backtrace /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(BLI_system_backtrace+0x1d) [0x6fb81ad] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1657639] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f9cf08eef20] /lib/x86_64-linux-gnu/libc.so.6(+0x18e5c7) [0x7f9cf0a3e5c7] /lib/x86_64-linux-gnu/libc.so.6(_IO_vfprintf+0x2143) [0x7f9cf090d4d3] /lib/x86_64-linux-gnu/libc.so.6(vsnprintf+0x90) [0x7f9cf0938910] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x2027e0b] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(CLG_logf+0x105) [0x2028225] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(ED_undo_object_set_active_or_warn+0x7f) [0x1dfbadf] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1fa8da8] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1f885ed] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(BKE_undosys_step_undo_with_data_ex+0x88) [0x1f892a8] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1dfaa28] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(ED_undo_operator_repeat+0x165) [0x1dfb855] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1e1022d] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1e1fff5] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1823093] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1824e4c] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(wm_event_do_handlers+0x312) [0x1825522] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(WM_main+0x20) [0x181b770] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender(main+0x317) [0x159dd27] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f9cf08d1b97] /home/tautvydas/Downloads/blender-2.82-fc1f5bded46a-linux-glibc217-x86_64/blender() [0x1653eec] ```

Hmm, well my file was failing for 2.81, so either it’s a separate issue after all, or something else about 2.81 is obfuscating the issue for only the other file.

Hmm, well my file was failing for 2.81, so either it’s a separate issue after all, or something else about 2.81 is obfuscating the issue for only the other file.

Well I am using old 2.81 Alpha build (Hash: 7790298f61, Date: 2019-10-09 11:41) so probably something changed since then

Well I am using old 2.81 Alpha build (Hash: 7790298f6191, Date: 2019-10-09 11:41) so probably something changed since then

This issue was referenced by 0964ae5266

This issue was referenced by 0964ae5266541f09a1d54d8941393bada97d08a2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73234
No description provided.