Fix T73234: Undo/redo with local collection crashes

Resolves crashes when edit-mode undo data wasn't included
because it wasn't visible, also resolves T73416.