source/blender/editors/include/ED_undo.h
@@ -23,6 +23,7 @@
 
 #include "BLI_compiler_attrs.h"
 
+struct Base;
 struct CLG_LogRef;
 struct Object;
 struct UndoStack;
@@ -61,6 +62,10 @@ void ED_undo_object_editmode_restore_helper(struct bContext *C,
                                             struct Object **object_array,
                                             uint object_array_len,
                                             uint object_array_stride);
+
+struct Object **ED_undo_editmode_objects_from_view_layer(struct ViewLayer *view_layer,
+                                                         uint *r_len);
+struct Base **ED_undo_editmode_bases_from_view_layer(struct ViewLayer *view_layer, uint *r_len);
 
 struct UndoStack *ED_undo_stack_get(void);
 
