source/blender/editors/metaball/editmball_undo.c
@@ -120,7 +120,8 @@ static void undomball_free_data(UndoMBall *umb)
 
 static Object *editmball_object_from_context(bContext *C)
 {
-  Object *obedit = CTX_data_edit_object(C);
+  ViewLayer *view_layer = CTX_data_view_layer(C);
+  Object *obedit = OBEDIT_FROM_VIEW_LAYER(view_layer);
   if (obedit && obedit->type == OB_MBALL) {
     MetaBall *mb = obedit->data;
     if (mb->editelems != NULL) {
@@ -162,8 +163,7 @@ static bool mball_undosys_step_encode(struct bContext *C, struct Main *bmain, Un
    * outside of this list will be moved out of edit-mode when reading back undo steps. */
   ViewLayer *view_layer = CTX_data_view_layer(C);
   uint objects_len = 0;
-  Object **objects = BKE_view_layer_array_from_objects_in_edit_mode_unique_data(
-      view_layer, NULL, &objects_len);
+  Object **objects = ED_undo_editmode_objects_from_view_layer(view_layer, &objects_len);
 
   us->elems = MEM_callocN(sizeof(*us->elems) * objects_len, __func__);
   us->elems_len = objects_len;
